z-index fixes for header

--- a/src/index.less
+++ b/src/index.less
@@ -10,6 +10,12 @@ body {
     background-color: white;
 }
 
+.z-wrapper {
+    z-index: 1000;
+    position: relative;
+    background-color: white;
+}
+
 .site-skiplinks,
 .siteheader,
 .sitefooter {
